packages/engine/src/generated/SqlParser.js
// Generated from grammars/SqlParser.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import SqlParserVisitor from './SqlParserVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class SqlParser extends antlr4.Parser {

    static grammarFileName = "SqlParser.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, "'*'", "'.'", "','", "';'", 
                            "'('", "')'", "'='", null, "'<'", "'>'", "'<='", 
                            "'>='", "'+'", "'-'", "'/'", "'%'", "'||'", 
                            "'::'" ];
    static symbolicNames = [ null, "SELECT", "FROM", "WHERE", "AND", "OR", 
                             "NOT", "IN", "BETWEEN", "LIKE", "IS", "NULL_", 
                             "TRUE_", "FALSE_", "AS", "ON", "USING", "JOIN", 
                             "INNER", "LEFT", "RIGHT", "FULL", "OUTER", 
                             "CROSS", "NATURAL", "GROUP", "BY", "HAVING", 
                             "ORDER", "ASC", "DESC", "LIMIT", "OFFSET", 
                             "UNION", "ALL", "DISTINCT", "EXISTS", "CASE", 
                             "WHEN", "THEN", "ELSE", "END", "CAST", "WITH", 
                             "RECURSIVE", "EXCEPT", "INTERSECT", "FETCH", 
                             "FIRST", "NEXT", "ROWS", "ROW", "ONLY", "OVER", 
                             "PARTITION", "WINDOW", "RANGE", "UNBOUNDED", 
                             "PRECEDING", "FOLLOWING", "CURRENT", "NULLS", 
                             "LAST", "ESCAPE", "ANY", "SOME", "LATERAL", 
                             "FILTER", "WITHIN", "COUNT", "SUM", "AVG", 
                             "MIN", "MAX", "INT", "INTEGER", "BIGINT", "SMALLINT", 
                             "FLOAT", "DOUBLE", "DECIMAL", "NUMERIC", "CHAR", 
                             "VARCHAR", "TEXT", "DATE", "TIME", "TIMESTAMP", 
                             "BOOLEAN", "INTERVAL", "INSERT", "INTO", "VALUES", 
                             "UPDATE", "SET", "DELETE", "CREATE", "ALTER", 
                             "DROP", "TRUNCATE", "TABLE", "INDEX", "VIEW", 
                             "DATABASE", "SCHEMA", "GRANT", "REVOKE", "EXEC", 
                             "EXECUTE", "CALL", "MERGE", "REPLACE", "LOAD", 
                             "DATA", "OUTFILE", "STAR", "DOT", "COMMA", 
                             "SEMI", "LPAREN", "RPAREN", "EQ", "NEQ", "LT", 
                             "GT", "LTE", "GTE", "PLUS", "MINUS", "SLASH", 
                             "PERCENT", "CONCAT", "SCOPE", "INTEGER_LITERAL", 
                             "DECIMAL_LITERAL", "STRING_LITERAL", "QUOTED_IDENTIFIER", 
                             "BACKTICK_IDENTIFIER", "IDENTIFIER", "WS", 
                             "LINE_COMMENT", "BLOCK_COMMENT" ];
    static ruleNames = [ "root", "statement", "dmlStatement", "ddlStatement", 
                         "otherStatement", "selectStatement", "withClause", 
                         "cteDefinition", "queryExpression", "queryTerm", 
                         "queryPrimary", "selectClause", "setQuantifier", 
                         "selectElements", "selectElement", "alias", "fromClause", 
                         "tableReference", "tablePrimary", "joinPart", "joinType", 
                         "joinCondition", "whereClause", "groupByClause", 
                         "havingClause", "orderByClause", "orderByElement", 
                         "limitClause", "expressionList", "expression", 
                         "orExpression", "andExpression", "notExpression", 
                         "comparisonExpression", "compareOp", "addExpression", 
                         "mulExpression", "unaryExpression", "primaryExpression", 
                         "columnRef", "tableName", "columnNameList", "functionCall", 
                         "aggregateFunction", "aggregateName", "filterClause", 
                         "windowFunction", "windowSpec", "partitionClause", 
                         "frameClause", "frameBound", "regularFunction", 
                         "functionName", "caseExpression", "castExpression", 
                         "dataType", "typeName", "literal", "identifier", 
                         "nonReservedKeyword" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = SqlParser.ruleNames;
        this.literalNames = SqlParser.literalNames;
        this.symbolicNames = SqlParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 38:
    	    		return this.primaryExpression_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    primaryExpression_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	root() {
	    let localctx = new RootContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, SqlParser.RULE_root);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.statement();
	        this.state = 125;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 121;
	                this.match(SqlParser.SEMI);
	                this.state = 122;
	                this.statement(); 
	            }
	            this.state = 127;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
	        }

	        this.state = 129;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===118) {
	            this.state = 128;
	            this.match(SqlParser.SEMI);
	        }

	        this.state = 131;
	        this.match(SqlParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, SqlParser.RULE_statement);
	    try {
	        this.state = 137;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 43:
	        case 119:
	            localctx = new SelectStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 133;
	            this.selectStatement();
	            break;
	        case 90:
	        case 93:
	        case 95:
	        case 110:
	        case 111:
	        case 112:
	            localctx = new DmlStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 134;
	            this.dmlStatement();
	            break;
	        case 96:
	        case 97:
	        case 98:
	        case 99:
	            localctx = new DdlStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 135;
	            this.ddlStatement();
	            break;
	        case 105:
	        case 106:
	        case 107:
	        case 108:
	        case 109:
	            localctx = new OtherStmtContext(this, localctx);
	            this.enterOuterAlt(localctx, 4);
	            this.state = 136;
	            this.otherStatement();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dmlStatement() {
	    let localctx = new DmlStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, SqlParser.RULE_dmlStatement);
	    try {
	        this.state = 198;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 90:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 139;
	            this.match(SqlParser.INSERT);
	            this.state = 140;
	            this.match(SqlParser.INTO);
	            this.state = 141;
	            this.tableName();
	            this.state = 146;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	            if(la_===1) {
	                this.state = 142;
	                this.match(SqlParser.LPAREN);
	                this.state = 143;
	                this.columnNameList();
	                this.state = 144;
	                this.match(SqlParser.RPAREN);

	            }
	            this.state = 150;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 92:
	                this.state = 148;
	                this.match(SqlParser.VALUES);
	                break;
	            case 1:
	            case 43:
	            case 119:
	                this.state = 149;
	                this.selectStatement();
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	            this.state = 155;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,5,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 152;
	                    this.matchWildcard(); 
	                }
	                this.state = 157;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,5,this._ctx);
	            }

	            break;
	        case 93:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 158;
	            this.match(SqlParser.UPDATE);
	            this.state = 159;
	            this.tableName();
	            this.state = 160;
	            this.match(SqlParser.SET);
	            this.state = 164;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,6,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 161;
	                    this.matchWildcard(); 
	                }
	                this.state = 166;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,6,this._ctx);
	            }

	            break;
	        case 95:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 167;
	            this.match(SqlParser.DELETE);
	            this.state = 168;
	            this.match(SqlParser.FROM);
	            this.state = 169;
	            this.tableName();
	            this.state = 173;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,7,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 170;
	                    this.matchWildcard(); 
	                }
	                this.state = 175;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,7,this._ctx);
	            }

	            break;
	        case 110:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 176;
	            this.match(SqlParser.MERGE);
	            this.state = 180;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,8,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 177;
	                    this.matchWildcard(); 
	                }
	                this.state = 182;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,8,this._ctx);
	            }

	            break;
	        case 111:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 183;
	            this.match(SqlParser.REPLACE);
	            this.state = 187;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 184;
	                    this.matchWildcard(); 
	                }
	                this.state = 189;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	            }

	            break;
	        case 112:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 190;
	            this.match(SqlParser.LOAD);
	            this.state = 191;
	            this.match(SqlParser.DATA);
	            this.state = 195;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 192;
	                    this.matchWildcard(); 
	                }
	                this.state = 197;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	ddlStatement() {
	    let localctx = new DdlStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, SqlParser.RULE_ddlStatement);
	    var _la = 0;
	    try {
	        this.state = 229;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 96:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 200;
	            this.match(SqlParser.CREATE);
	            this.state = 201;
	            _la = this._input.LA(1);
	            if(!(((((_la - 100)) & ~0x1f) === 0 && ((1 << (_la - 100)) & 31) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 205;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 202;
	                    this.matchWildcard(); 
	                }
	                this.state = 207;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	            }

	            break;
	        case 97:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 208;
	            this.match(SqlParser.ALTER);
	            this.state = 209;
	            _la = this._input.LA(1);
	            if(!(((((_la - 100)) & ~0x1f) === 0 && ((1 << (_la - 100)) & 29) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 213;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,13,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 210;
	                    this.matchWildcard(); 
	                }
	                this.state = 215;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,13,this._ctx);
	            }

	            break;
	        case 98:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 216;
	            this.match(SqlParser.DROP);
	            this.state = 217;
	            _la = this._input.LA(1);
	            if(!(((((_la - 100)) & ~0x1f) === 0 && ((1 << (_la - 100)) & 31) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 221;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,14,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 218;
	                    this.matchWildcard(); 
	                }
	                this.state = 223;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,14,this._ctx);
	            }

	            break;
	        case 99:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 224;
	            this.match(SqlParser.TRUNCATE);
	            this.state = 226;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	            if(la_===1) {
	                this.state = 225;
	                this.match(SqlParser.TABLE);

	            }
	            this.state = 228;
	            this.tableName();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	otherStatement() {
	    let localctx = new OtherStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, SqlParser.RULE_otherStatement);
	    var _la = 0;
	    try {
	        this.state = 252;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 105:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 231;
	            this.match(SqlParser.GRANT);
	            this.state = 235;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,17,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 232;
	                    this.matchWildcard(); 
	                }
	                this.state = 237;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,17,this._ctx);
	            }

	            break;
	        case 106:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 238;
	            this.match(SqlParser.REVOKE);
	            this.state = 242;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,18,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 239;
	                    this.matchWildcard(); 
	                }
	                this.state = 244;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,18,this._ctx);
	            }

	            break;
	        case 107:
	        case 108:
	        case 109:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 245;
	            _la = this._input.LA(1);
	            if(!(((((_la - 107)) & ~0x1f) === 0 && ((1 << (_la - 107)) & 7) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 249;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,19,this._ctx)
	            while(_alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1+1) {
	                    this.state = 246;
	                    this.matchWildcard(); 
	                }
	                this.state = 251;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,19,this._ctx);
	            }

	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	selectStatement() {
	    let localctx = new SelectStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, SqlParser.RULE_selectStatement);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 255;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===43) {
	            this.state = 254;
	            this.withClause();
	        }

	        this.state = 257;
	        this.queryExpression();
	        this.state = 259;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	        if(la_===1) {
	            this.state = 258;
	            this.orderByClause();

	        }
	        this.state = 262;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	        if(la_===1) {
	            this.state = 261;
	            this.limitClause();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	withClause() {
	    let localctx = new WithClauseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, SqlParser.RULE_withClause);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 264;
	        this.match(SqlParser.WITH);
	        this.state = 266;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,24,this._ctx);
	        if(la_===1) {
	            this.state = 265;
	            this.match(SqlParser.RECURSIVE);

	        }
	        this.state = 268;
	        this.cteDefinition();
	        this.state = 273;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===117) {
	            this.state = 269;
	            this.match(SqlParser.COMMA);
	            this.state = 270;
	            this.cteDefinition();
	            this.state = 275;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cteDefinition() {
	    let localctx = new CteDefinitionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, SqlParser.RULE_cteDefinition);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 276;
	        this.identifier();
	        this.state = 277;
	        this.match(SqlParser.AS);
	        this.state = 278;
	        this.match(SqlParser.LPAREN);
	        this.state = 279;
	        this.selectStatement();
	        this.state = 280;
	        this.match(SqlParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


